fix modern-footnotes-footnote z-index

--- a/themes/spichka/resources/styles/plugins/footnotes.scss
+++ b/themes/spichka/resources/styles/plugins/footnotes.scss
@@ -1,6 +1,7 @@
 .modern-footnotes-footnote__note--tooltip,
 .modern-footnotes-footnote__note--expandable {
   overflow-wrap: break-word;
+  z-index: 99 !important;
 }
 
 .modern-footnotes-footnote__note a{
